<resources>
    <string name="app_name">TicketToRide</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="host_ip">Host IP Address</string>
    <string name="host_port">Host Port</string>
    <string name="game_name">Game Name</string>
    <string name="game_players">Players in Game</string>
    <string name="spots_left">Spots Left</string>
    <string name="create_game">Create Game</string>
    <string name="join_game">Tap on a game in the list to join it.</string>
    <string name="start_game">Start Game</string>
    <string-array name="num_players_list">
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_game">Game</string>
</resources>
