<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="activity.GameListActivity">
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/leftGuide"
        app:layout_constraintGuide_percent=".25"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/rightGuide"
        app:layout_constraintGuide_percent=".75"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/topGuide"
        app:layout_constraintGuide_percent=".25"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/bottomGuide"
        app:layout_constraintGuide_percent=".75"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:id="@+id/topBarGuide"
        app:layout_constraintGuide_percent=".3"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/menuOne"
        app:layout_constraintGuide_percent=".35"/>
    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/menuTwo"
        app:layout_constraintGuide_percent=".65"/>
    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/lightGray"
        app:layout_constraintBottom_toTopOf="@id/bottomGuide"
        app:layout_constraintTop_toBottomOf="@id/topGuide"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"
        app:layout_constraintStart_toEndOf="@id/leftGuide"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/menuOne"
        android:text="@string/game_name"
        app:layout_constraintTop_toBottomOf="@id/topGuide"
        app:layout_constraintBottom_toTopOf="@id/topBarGuide"
        app:layout_constraintEnd_toStartOf="@id/menuOne"
        app:layout_constraintStart_toEndOf="@id/leftGuide"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/menuTwo"
        android:text="@string/game_players"
        app:layout_constraintTop_toBottomOf="@id/topGuide"
        app:layout_constraintBottom_toTopOf="@id/topBarGuide"
        app:layout_constraintEnd_toStartOf="@id/menuTwo"
        app:layout_constraintStart_toEndOf="@id/menuOne"/>
    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/menuThree"
        android:text="@string/spots_left"
        app:layout_constraintTop_toBottomOf="@id/topGuide"
        app:layout_constraintBottom_toTopOf="@id/topBarGuide"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"
        app:layout_constraintStart_toEndOf="@id/menuTwo"/>
    <android.support.v7.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:id="@+id/gameList"
        app:layout_constraintTop_toBottomOf="@id/topBarGuide"
        app:layout_constraintBottom_toTopOf="@id/bottomGuide"
        app:layout_constraintStart_toEndOf="@id/leftGuide"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"/>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/gameName"
        android:inputType="text"
        android:hint="@string/game_name"
        app:layout_constraintStart_toEndOf="@id/leftGuide"
        app:layout_constraintTop_toBottomOf="@id/bottomGuide"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/numPlayers"
        app:layout_constraintEnd_toStartOf="@id/menuTwo"
        app:layout_constraintStart_toEndOf="@id/menuOne"
        app:layout_constraintTop_toBottomOf="@id/bottomGuide"
        app:layout_constraintBottom_toBottomOf="parent"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/createGame"
        android:text="@string/create_game"
        android:enabled="false"
        app:layout_constraintEnd_toStartOf="@id/rightGuide"
        app:layout_constraintTop_toBottomOf="@id/bottomGuide"
        app:layout_constraintBottom_toBottomOf="parent"/>

</android.support.constraint.ConstraintLayout>